--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,22 +1,22 @@
-# name: Build and Push Docker image
+name: Build and Push Docker image
 
-# on:
-#   push:
-#     branches:
-#       - main
+on:
+  push:
+    branches:
+      - main
 
-# jobs:
-#   build-and-push:
-#     runs-on: ubuntu-latest
+jobs:
+  build-and-push:
+    runs-on: ubuntu-latest
 
-#     steps:
-#       - name: Checkout code
-#         uses: actions/checkout@v2
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
 
-#       - name: Login to Docker Hub
-#         run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+      - name: Login to Docker Hub
+        run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
 
-#       - name: Build and Push Docker Image
-#         run: 
-#           docker build -t brunooliverserra/nginx-bestro-restaurant:v1 .
-#           docker push brunooliverserra/nginx-bestro-restaurant:v1
+      - name: Build and Push Docker Image
+        run: 
+          docker build -t brunooliverserra/nginx-bestro-restaurant:v1 .
+          docker push brunooliverserra/nginx-bestro-restaurant:v1
